--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "clue/redis-server",
     "description": "A redis server implementation in pure PHP",
     "keywords": ["redis", "server", "async", "react"],
-    "homepage": "https://github.com/clue/redis-server",
+    "homepage": "https://github.com/clue/php-redis-server",
     "license": "MIT",
     "authors": [
         {
