--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=5.3",
         "react/promise": "~1",
         "react/socket-client": "0.3.*",
         "react/event-loop": "0.3.*",
