--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": ">=5.3",
         "react/promise": "~1.0|~2.0",
-        "react/socket": "0.3.*",
-        "react/event-loop": "0.3.*",
+        "react/socket": "0.3.*|0.4.*",
+        "react/event-loop": "0.3.*|0.4.*",
         "clue/redis-protocol": "0.3.*"
     },
     "autoload": {
