--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "react/promise": "~1.0|~2.0",
         "react/socket": "0.3.*|0.4.*",
         "react/event-loop": "0.3.*|0.4.*",
-        "clue/redis-protocol": "0.3.*"
+        "clue/redis-protocol": "0.3.*",
+        "evenement/evenement": "~1.0|~2.0"
     },
     "autoload": {
         "psr-0": { "Clue\\Redis\\Server": "src" }
