--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         "evenement/evenement": "~1.0|~2.0"
     },
     "autoload": {
-        "psr-0": { "Clue\\Redis\\Server": "src" }
+        "psr-4": { "Clue\\Redis\\Server\\": "src" }
     }
 }
