New main bin file bin/redis-server.php Fixes #9

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
     },
     "autoload": {
         "psr-4": { "Clue\\Redis\\Server\\": "src" }
-    }
+    },
+    "bin": [
+        "bin/redis-server.php"
+    ]
 }
