--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     ],
     "require": {
         "php": ">=5.3",
-        "react/promise": "~1.0|~2.0",
-        "react/socket": "0.3.*|0.4.*",
+        "react/promise": "~2.1",
+        "react/socket": "0.4.*",
         "react/event-loop": "0.3.*|0.4.*",
         "clue/redis-protocol": "0.3.*",
-        "evenement/evenement": "~1.0|~2.0"
+        "evenement/evenement": "~2.0",
+        "clue/block-react": "1.1.*"
     },
     "autoload": {
         "psr-4": { "Clue\\Redis\\Server\\": "src" }
