--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "react/socket": "0.4.*",
         "react/event-loop": "0.3.*|0.4.*",
         "clue/redis-protocol": "0.3.*",
-        "evenement/evenement": "~2.0",
-        "clue/block-react": "1.1.*"
+        "evenement/evenement": "~2.0"
     },
     "autoload": {
         "psr-4": { "Clue\\Redis\\Server\\": "src" }
