--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
     },
     "bin": [
         "bin/redis-server.php"
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": " 4.1.*"
+    }
 }
