--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3",
+        "php": ">=7.4",
         "react/promise": "~1.0|~2.0",
         "react/socket": "0.3.*|0.4.*",
         "react/event-loop": "0.3.*|0.4.*",
@@ -19,9 +19,20 @@
         "evenement/evenement": "~1.0|~2.0"
     },
     "autoload": {
-        "psr-4": { "Clue\\Redis\\Server\\": "src" }
+        "psr-4": {
+            "Clue\\Redis\\Server\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Clue\\Redis\\Server\\Tests\\": "tests"
+        }
     },
     "bin": [
         "bin/redis-server.php"
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "friendsofphp/php-cs-fixer": "^2.16"
+    }
 }
